--- a/web/js/nodejs/courses/mosh/express-recap/package.json
+++ b/web/js/nodejs/courses/mosh/express-recap/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "express-demo",
+  "name": "express-recap",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -15,7 +16,6 @@
     "helmet": "^4.4.1",
     "joi": "^17.3.0",
     "morgan": "^1.10.0",
-    "pug": "^3.0.0",
-    "underscore": "^1.12.0"
+    "pug": "^3.0.0"
   }
 }
