--- a/web/js/nodejs/courses/mosh/vidly/package.json
+++ b/web/js/nodejs/courses/mosh/vidly/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-demo",
+  "name": "vidly",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,13 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "config": "^3.3.3",
-    "debug": "^4.3.1",
     "express": "^4.17.1",
-    "helmet": "^4.4.1",
     "joi": "^17.3.0",
-    "morgan": "^1.10.0",
-    "pug": "^3.0.0",
     "underscore": "^1.12.0"
   }
 }
