--- a/web/js/nodejs/courses/mosh/vidly/package.json
+++ b/web/js/nodejs/courses/mosh/vidly/package.json
@@ -9,10 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "config": "^3.3.3",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "fawn": "^2.1.5",
+    "helmet": "^4.4.1",
     "joi": "^17.3.0",
+    "joi-objectid": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.11.13",
-    "underscore": "^1.12.0"
+    "winston": "^3.3.3",
+    "winston-mongodb": "^5.0.5"
   }
 }
