--- a/web/js/nodejs/courses/mosh/vidly/package.json
+++ b/web/js/nodejs/courses/mosh/vidly/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "jest --watchAll --verbose"
+  },
+  "engines": {
+    "node": "14.15.3"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "compression": "^1.7.4",
     "config": "^3.3.3",
     "debug": "^4.3.1",
     "express": "^4.17.1",
@@ -20,13 +25,13 @@
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.13",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.5"
   },
   "devDependencies": {
     "jest": "^26.6.3",
-    "moment": "^2.29.1",
     "supertest": "^6.1.3"
   },
   "jest": {
