--- a/web/js/nodejs/apps/maket/package.json
+++ b/web/js/nodejs/apps/maket/package.json
@@ -7,7 +7,7 @@
     "testEnvironment": "node"
   },
   "scripts": {
-    "test": "jest --watchAll --detectOpenHandles"
+    "test": "jest --watchAll --detectOpenHandles --maxWorkers=1"
   },
   "author": "ephraimilunga",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "debug": "^2.6.9",
     "express": "^4.17.1",
     "joi": "^17.4.0",
+    "joi-objectid": "^3.0.1",
     "mongoose": "^5.11.13"
   },
   "devDependencies": {
