--- a/mobile/flutter/courses/appbrewery/xylophone/.gitignore
+++ b/mobile/flutter/courses/appbrewery/xylophone/.gitignore
@@ -8,6 +8,11 @@
 .buildlog/
 .history
 .svn/
+../../../../../.DS_Store
+../../../../.DS_Store
+../../../.DS_Store
+../../.DS_Store
+../.DS_Store
 
 # IntelliJ related
 *.iml
