--- a/mobile/flutter/courses/appbrewery/flash_chat/pubspec.yaml
+++ b/mobile/flutter/courses/appbrewery/flash_chat/pubspec.yaml
@@ -12,6 +12,11 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   animated_text_kit: ^4.2.0
+  firebase_core: ^1.0.3
+  firebase_auth: ^1.1.0
+  cloud_firestore: ^1.0.5
+  modal_progress_hud: ^0.1.3
+
 
 dev_dependencies:
   flutter_test:
