--- a/mobile/flutter/projects/maket/pubspec.yaml
+++ b/mobile/flutter/projects/maket/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
   font_awesome_flutter: ^9.0.0
+  carousel_slider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
