--- a/mobile/flutter/projects/maket/pubspec.yaml
+++ b/mobile/flutter/projects/maket/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   google_fonts: ^2.0.0
   font_awesome_flutter: ^9.0.0
   carousel_slider: ^3.0.0
+  get_it: ^7.1.3
+  provider: ^5.0.0
+  http: ^0.13.3
+  shared_preferences: ^2.0.5
+
 
 dev_dependencies:
   flutter_test:
