--- a/web/js/nodejs/apps/maket/package.json
+++ b/web/js/nodejs/apps/maket/package.json
@@ -21,7 +21,8 @@
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.12.13"
+    "mongoose": "^5.12.13",
+    "nodemailer": "^6.6.2"
   },
   "devDependencies": {
     "jest": "^26.6.3",
